--- a/RMS.App/Views/Home/AboutDeveloper.cshtml
+++ b/RMS.App/Views/Home/AboutDeveloper.cshtml
@@ -29,15 +29,31 @@
                     <h3 class="text-center">Parvez Ahmed</h3>
                     <br/>
                 </div>
-                <div class="col-md-2 float-left">
-                    <img class="img-thumbnail clearfix" alt="Parvez Ahmed" title="Parvez Ahmed" style="width: 130px; height: 130px" src="~/Content/img/developerimg/parvaz.jpg"/>
+                <div class="col-md-3 float-left">
+                    <img class="img-thumbnail clearfix" alt="Parvez Ahmed" title="Parvez Ahmed" style="width: 150px; height: 180px" src="~/Content/img/developerimg/parvaz.jpg"/>
                 </div>
-                <div class="col-md-9 float-left">
+                <div class="col-md-8 float-left text-justify">
+                    <p><em>
+                            My name is <strong class="font-weight-bold text-uppercase text-secondary">Parvez Ahmed</strong> and I am a web developer from Dhaka, Bangladesh.
+                            I graduated in 2009 with a bachelor’s degree and Professional Diploma in Web Applications & Development .net framework from BKIICT.
+                            I have been in the field for nearly 2 years, and have been loving every minute of it.
+                            This is our first professional application, developed for Bangladesh Computer Council (BCC). 
+                            Check out some of the links below to see what I’ve been up to lately. 
+
+
+                        </em>
+                    </p>
                     <p>
-                        I am <strong>Parvez Ahmed</strong>. I am learning web development at BKIICT on Asp.net. I have learned continue................
-                        I am <strong>Parvez Ahmedr</strong>. I am learning web development at BKIICT on Asp.net. I have learned continue................
-                        I am <strong>Parvez Ahmed</strong>. I am learning web development at BKIICT on Asp.net. I have learned continue................
-                        I am <strong>Parvez Ahmed</strong>. I am learning web development at BKIICT on Asp.net. I have learned continue................
+
+                       <strong>Title :</strong> <a href="#" title="Link !" target="_blank"> Link A !</a><br/>
+                        <strong>Title :</strong> <a href="#" title="Link !" target="_blank"> Link B !</a>
+                    </p>
+                    <p>
+                        <strong>
+                            Contacts:<br/>
+                            Mobile: - +88 01714863917<br/>
+                            Email: - chittoranjan.sarker@gmail.com
+                        </strong>
                     </p>
                 </div>
 
@@ -47,15 +63,30 @@
                     <h3 class="text-center">Masum Dollar</h3>
                     <br/>
                 </div>
-                <div class="col-md-2 float-left">
-                    <img class="img-thumbnail clearfix" alt="Masum Dollar" title="Masum Dollar" style="width: 130px; height: 130px" src="~/Content/img/developerimg/masum.jpg"/>
+                <div class="col-md-3 float-left">
+                    <img class="img-thumbnail clearfix" alt="Masum Dollar" title="Masum Dollar" style="width: 150px; height: 180px" src="~/Content/img/developerimg/masum.jpg"/>
                 </div>
-                <div class="col-md-9 float-left">
+                <div class="col-md-8 float-left text-justify">
                     <p>
-                        I am <strong>Masum Dollar</strong>. I am learning web development at BKIICT on Asp.net. I have learned continue................
-                        I am <strong>Masum Dollar</strong>. I am learning web development at BKIICT on Asp.net. I have learned continue................
-                        I am <strong>Masum Dollar</strong>. I am learning web development at BKIICT on Asp.net. I have learned continue................
-                        I am <strong>Masum Dollar</strong>. I am learning web development at BKIICT on Asp.net. I have learned continue................
+                        <em>
+                            My name is <strong class="font-weight-bold text-uppercase text-secondary">Masum Dollar</strong> and I am a web developer from Dhaka, Bangladesh.
+                            I graduated in 2009 with a bachelor’s degree and Professional Diploma in Web Applications & Development .net framework from BKIICT.
+                            I have been in the field for nearly 2 years, and have been loving every minute of it. Check out some of the links below to see what I’ve been up to lately.
+
+
+                        </em>
+                    </p>
+                    <p>
+
+                        <strong>Title :</strong> <a href="#" title="Link !" target="_blank"> Link A !</a><br/>
+                        <strong>Title :</strong> <a href="#" title="Link !" target="_blank"> Link B !</a>
+                    </p>
+                    <p>
+                        <strong>
+                            Contacts:<br />
+                            Mobile: - +88 01714863917<br />
+                            Email: - chittoranjan.sarker@gmail.com
+                        </strong>
                     </p>
                 </div>
 
@@ -65,15 +96,31 @@
                     <h3 class="text-center">Sultana Bonna</h3>
                     <br/>
                 </div>
-                <div class="col-md-2 float-left">
-                    <img class="img-thumbnail clearfix" alt="Sultana Bonna" title="Sultana Bonna" style="width: 130px; height: 130px" src="~/Content/img/developerimg/bonna.jpg"/>
+                <div class="col-md-3 float-left">
+                    <img class="img-thumbnail clearfix" alt="Sultana Bonna" title="Sultana Bonna" style="width: 150px; height: 180px" src="~/Content/img/developerimg/bonna.jpg"/>
                 </div>
-                <div class="col-md-9 float-left">
+                <div class="col-md-8 float-left text-justify">
                     <p>
-                        I am <strong>Sultana Bonna</strong>. I am learning web development at BKIICT on Asp.net. I have learned continue................
-                        I am <strong>Sultana Bonna</strong>. I am learning web development at BKIICT on Asp.net. I have learned continue................
-                        I am <strong>Sultana Bonna</strong>. I am learning web development at BKIICT on Asp.net. I have learned continue................
-                        I am <strong>Sultana Bonna</strong>. I am learning web development at BKIICT on Asp.net. I have learned continue................
+                        <em>
+                            My name is <strong class="font-weight-bold text-uppercase text-secondary"> Luthfunnesa Sultana </strong> and I am a web designer from Dhaka, Bangladesh.
+                            Who specializes in creating dynamic and beautiful web pages? 
+                            I graduated in 2016 with a bachelor’s degree in Computer Science and Engineering from the Bangladesh University of Business & Technology.
+                            This is our first professional application, developed for Bangladesh Computer Council (BCC). 
+                            I am a trainee of Professional Diploma in Web Applications & Development from the BKIICT.
+
+                        </em>
+                    </p>
+                    <p>
+
+                        <strong>Title :</strong> <a href="#" title="Link !" target="_blank"> Link A !</a><br/>
+                        <strong>Title :</strong> <a href="#" title="Link !" target="_blank"> Link B !</a>
+                    </p>
+                    <p>
+                        <strong>
+                            Contacts:<br />
+                            Mobile: - +88 01681854486<br />
+                            Email: - luth.sul@gmail.com
+                        </strong>
                     </p>
                 </div>
 
@@ -83,15 +130,31 @@
                     <h3 class="text-center">Benajeer Haque</h3>
                     <br/>
                 </div>
-                <div class="col-md-2 float-left">
-                    <img class="img-thumbnail clearfix" alt="Benajeer Haque" title="Benajeer Haque" style="width: 130px; height: 130px" src="~/Content/img/developerimg/benazir.jpg"/>
+                <div class="col-md-3 float-left">
+                    <img class="img-thumbnail clearfix" alt="Benajeer Haque" title="Benajeer Haque" style="width: 150px; height: 180px" src="~/Content/img/developerimg/benazir.jpg"/>
                 </div>
-                <div class="col-md-9 float-left">
+                <div class="col-md-8 float-left text-justify">
                     <p>
-                        I am <strong>Benajeer Haque</strong>. I am learning web development at BKIICT on Asp.net. I have learned continue................
-                        I am <strong>Benajeer Haque</strong>. I am learning web development at BKIICT on Asp.net. I have learned continue................
-                        I am <strong>Benajeer Haque</strong>. I am learning web development at BKIICT on Asp.net. I have learned continue................
-                        I am <strong>Benajeer Haque</strong>. I am learning web development at BKIICT on Asp.net. I have learned continue................
+                        <em>
+                            My name is<strong class="font-weight-bold text-uppercase text-secondary"> Benajeer Haque </strong> and I am a web designer from Dhaka, Bangladesh.
+                            Who specializes in creating dynamic and beautiful web pages?
+                            I graduated in 2016 with a bachelor’s degree in Computer Science and Engineering from the Bangladesh University of Business & Technology.
+                            This is our first professional application, developed for Bangladesh Computer Council (BCC).
+                            I am a trainee of Professional Diploma in Web Applications & Development from the BKIICT.
+
+                        </em>
+                    </p>
+                    <p>
+
+                        <strong>Title :</strong> <a href="#" title="Link !" target="_blank"> Link A !</a><br/>
+                        <strong>Title :</strong> <a href="#" title="Link !" target="_blank"> Link B !</a>
+                    </p>
+                    <p>
+                        <strong>
+                            Contacts:<br />
+                            Mobile: - +88 01681854486<br />
+                            Email: - benjeer.nure@gmail.com
+                        </strong>
                     </p>
                 </div>
 
@@ -101,15 +164,30 @@
                     <h3 class="text-center">Chitto Ranjan Sarker</h3>
                     <br />
                 </div>
-                <div class="col-md-2 float-left">
-                    <img class="img-thumbnail clearfix" alt="Chitto Ranjna Sarker" title="Chitto Ranjan Sarker" style="width: 130px; height: 130px" src="~/Content/img/developerimg/chitto.jpg" />
+                <div class="col-md-3 float-left">
+                    <img class="img-thumbnail clearfix" alt="Chitto Ranjna Sarker" title="Chitto Ranjan Sarker" style="width: 150px; height: 180px" src="~/Content/img/developerimg/chitto.jpg" />
                 </div>
-                <div class="col-md-9 float-left">
+                <div class="col-md-8 float-left text-justify">
                     <p>
-                        I am <strong>Chitt Ranjan Sarker</strong>. I am learning web development at BKIICT on Asp.net. I have learned continue................
-                        I am <strong>Chitt Ranjan Sarker</strong>. I am learning web development at BKIICT on Asp.net. I have learned continue................
-                        I am <strong>Chitt Ranjan Sarker</strong>. I am learning web development at BKIICT on Asp.net. I have learned continue................
-                        I am <strong>Chitt Ranjan Sarker</strong>. I am learning web development at BKIICT on Asp.net. I have learned continue................
+                        <em>
+                            My name is <strong class="font-weight-bold text-uppercase text-secondary"> Chitto Ranjan Sarker </strong> and I am a web developer from Dhaka, Bangladesh. 
+                            I graduated in 2009 with a bachelor’s degree and Professional Diploma in Web Applications & Development .net framework from BKIICT. 
+                            I have been in the field for nearly 2 years, and have been loving every minute of it. This is our first professional application, developed for Bangladesh Computer Council (BCC). 
+                            Check out some of the links below to see what I’ve been up to lately. 
+
+                        </em>
+                    </p>
+                    <p>
+
+                        <strong>Title :</strong> <a href="#" title="Link !" target="_blank"> Link A !</a><br/>
+                        <strong>Title :</strong> <a href="#" title="Link !" target="_blank"> Link B !</a>
+                    </p>
+                    <p>
+                        <strong>
+                            Contacts:<br />
+                            Mobile: - +88 01714 863 917<br />
+                            Email: - chittoranjan.sarker@gmail.com
+                        </strong>
                     </p>
                 </div>
 
