--- a/RMS.App/Views/Shared/_MenuBar.cshtml
+++ b/RMS.App/Views/Shared/_MenuBar.cshtml
@@ -96,7 +96,7 @@
                             </ul>
                         </li>
 
-                        <li>@Html.ActionLink("Send Requisition", "Create", "Requisitions")</li>
+                        <li>@Html.ActionLink("Send Request", "Create", "Requisitions")</li>
                         <li>@Html.ActionLink("Requisition Queue", "Queue", "RequisitionQueue")</li>
                         @*<li class="menu-has-children">
                                 <a href="#">Requisition Queue</a>
