--- a/RMS.App/Views/Vehicles/Create.cshtml
+++ b/RMS.App/Views/Vehicles/Create.cshtml
@@ -14,6 +14,15 @@
     <div class="form-horizontal">
 
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+        <div class="form-group row">
+            @Html.LabelFor(model => model.VehicleTypeId, htmlAttributes: new {@class = "control-label col-md-2"})
+            <div class="col-md-4">
+                @Html.DropDownList("VehicleTypeId", null, "Select", htmlAttributes: new {@class = "form-control", @id = "searchableDD1"})
+                @Html.ValidationMessageFor(model => model.VehicleTypeId, "", new {@class = "text-danger"})
+            </div>
+        </div>
+
         <div class="form-group row">
             @Html.LabelFor(model => model.BrandName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-4">
@@ -56,14 +65,6 @@
                 @Html.ValidationMessageFor(model => model.SeatCapacity, "", new { @class = "text-danger" })
             </div>
         </div>
-        <div class="form-group row">
-            @Html.LabelFor(model => model.VehicleTypeId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-4">
-                @Html.DropDownList("VehicleTypeId", null, "Select", htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model=>model.VehicleTypeId,"",new {@class="text-danger"})
-            </div>
-        </div>
-       
 
         <div class="form-group row">
             <div class="control-label col-md-2"></div>
@@ -77,5 +78,5 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-
+    <script src="~/Scripts/chosenDD/chosen_DD.js"></script>
 }
