--- a/RMS.App/Views/Employees/Edit.cshtml
+++ b/RMS.App/Views/Employees/Edit.cshtml
@@ -33,7 +33,7 @@
             <div class="form-group row">
                 @Html.LabelFor(model => model.EmployeeTypeId, htmlAttributes: new {@class = "control-label col-md-3"})
                 <div class="col-md-9">
-                    @Html.DropDownList("EmployeeTypeId", null, htmlAttributes: new {@class = "form-control"})
+                    @Html.DropDownList("EmployeeTypeId", null, htmlAttributes: new {@class = "form-control", @id= "searchableDD1" })
                     @Html.ValidationMessageFor(model => model.EmployeeTypeId, "", new {@class = "text-danger"})
                 </div>
             </div>
@@ -103,7 +103,7 @@
             <div class="form-group row">
                 @Html.LabelFor(model => model.OrganizationId, htmlAttributes: new {@class = "control-label col-md-3"})
                 <div class="col-md-9">
-                    @Html.DropDownList("OrganizationId", null, htmlAttributes: new {@class = "form-control"})
+                    @Html.DropDownList("OrganizationId", null, htmlAttributes: new {@class = "form-control", @id= "searchableDD2" })
                     @Html.ValidationMessageFor(model => model.OrganizationId, "", new {@class = "text-danger"})
                 </div>
             </div>
@@ -111,7 +111,7 @@
             <div class="form-group row">
                 @Html.LabelFor(model => model.DepartmentId, htmlAttributes: new {@class = "control-label col-md-3"})
                 <div class="col-md-9">
-                    @Html.DropDownList("DepartmentId", null, htmlAttributes: new {@class = "form-control"})
+                    @Html.DropDownList("DepartmentId", null, htmlAttributes: new {@class = "form-control", @id= "searchableDD3" })
                     @Html.ValidationMessageFor(model => model.DepartmentId, "", new {@class = "text-danger"})
                 </div>
             </div>
@@ -119,7 +119,7 @@
             <div class="form-group row">
                 @Html.LabelFor(model => model.DesignationId, htmlAttributes: new {@class = "control-label col-md-3"})
                 <div class="col-md-9">
-                    @Html.DropDownList("DesignationId", null, htmlAttributes: new {@class = "form-control"})
+                    @Html.DropDownList("DesignationId", null, htmlAttributes: new {@class = "form-control",@id= "searchableDD4" })
                     @Html.ValidationMessageFor(model => model.DesignationId, "", new {@class = "text-danger"})
                 </div>
             </div>
@@ -485,4 +485,5 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
     <script src="~/Scripts/AddressJs/EditEmployeeAddress.js"></script>
+    <script src="~/Scripts/chosenDD/chosen_DD.js"></script>
 }
