--- a/RMS.App/Views/RequisitionQueue/Queue.cshtml
+++ b/RMS.App/Views/RequisitionQueue/Queue.cshtml
@@ -2,86 +2,166 @@
 
 @{
     ViewBag.Title = "Queue";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    //Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@section styles
+{
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css" />
+    <link href="https://cdn.datatables.net/1.10.19/css/dataTables.semanticui.min.css" rel="stylesheet" />
 
-<h2>Queue</h2>
+    <link href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap.min.css" rel="stylesheet" />
 
+}
+<h2>Requisition Queue</h2>
+<hr/>
 
-<div class="row">
-    <div class="col-md-3 border-right border-primary">
-        <nav class="navbar navbar-default" role="navigation">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
+<div class="container border">
+    <div class="row"></div><br/>
+    <div class="row">
+        <div class="col-md-2">
+            <div class="dropdown">
+                <button type="button" class="btn btn-lg btn-outline-info dropdown-toggle" data-toggle="dropdown">
+                    Queue Items
                 </button>
-                <a class="navbar-brand" href="#">Queue</a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="@Url.Action("Requests", "AssignRequisitions")"> New Requisitions </a>
+                    <a class="dropdown-item" href="@Url.Action("Index", "AssignRequisitions")"> Assigned Requisitions </a>
+                    <a class="dropdown-item" href="@Url.Action("Index", "RequisitionStatus")"> Requisitions Status </a>
+                    <a class="dropdown-item" href="@Url.Action("Index", "Requisitions")">All Requisition</a>
+                </div>
             </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse navbar-ex1-collapse">
-                <ul class="nav navbar-nav">
-                    <li class="active">@Html.ActionLink("New Requisitions", "Requests", "AssignRequisitions")</li>
-                    <li>@Html.ActionLink("Assigned Requisitions", "Index", "AssignRequisitions")</li>
-                    <li>@Html.ActionLink("Requisitions Status", "Index", "RequisitionStatus")</li>
-                    <li>@Html.ActionLink("All Requisitions", "Index", "Requisitions")</li>
-                </ul>
+            @*<nav class="navbar navbar-default" role="navigation">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">Queue</a>
+                </div>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse navbar-ex1-collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="active">@Html.ActionLink("New Requisitions", "Requests", "AssignRequisitions")</li>
+                        <li>@Html.ActionLink("Assigned Requisitions", "Index", "AssignRequisitions")</li>
+                        <li>@Html.ActionLink("Requisitions Status", "Index", "RequisitionStatus")</li>
+                        <li>@Html.ActionLink("All Requisitions", "Index", "Requisitions")</li>
+                    </ul>
 
-            </div><!-- /.navbar-collapse -->
-        </nav>
+                </div><!-- /.navbar-collapse -->
+            </nav>*@
 
-    </div>
-    <div class="col-md-9">
-
-
-        <table class="table">
-            <tr>
-
-                <th>
-                    @Html.DisplayNameFor(model => model.RequisitionNumber)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.StatusType)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Requisition.Employee.FullName)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Requisition.Employee.Designation)
-                </th>
-                <th class="text-right">Action</th>
-            </tr>
-
-            @foreach (var item in Model)
-            {
-                <tr>
-
-                    <td>
-                        @Html.DisplayFor(modelItem => item.RequisitionNumber, new { @class = "text-danger" })
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.StatusType)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Requisition.Employee.FullName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Requisition.Employee.Designation.Title)
-                    </td>
-                    <td class="text-right">
-                        @Html.ActionLink("Assign", "Create","AssignRequisitions", new { requisitionId = item.RequisitionId }, new { @class = "btn btn-primary btn-sm" })
-                        @Html.ActionLink("View", "ViewDetails","AssignRequisitions", new { id = item.RequisitionId }, new { @class = "btn btn-info btn-sm" })
-                        @Html.ActionLink("Cancel", "Cancel","AssignRequisitions", new { statusId = item.Id }, new { @class = "btn btn-outline-danger btn-sm" })
-
-                    </td>
+        </div>
+        <div class="col-md-10 border-left" style="padding: 15px 25px">
+            <h2 class="text-center"> New Requisition</h2>
+            <table id="example2" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: 100%">
+                <thead>
+                <tr class="bg-info">
+                    <th>
+                        SL
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.RequisitionNumber)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.StatusType)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Requisition.SubmitDateTime)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Requisition.Employee.FullName)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Requisition.Employee.Designation)
+                    </th>
+                    <th class="text-center">
+                        Action
+                    </th>
                 </tr>
-            }
+                </thead>
+                <tbody>
+                @{
+                    var sl = 0;
+                }
+                @foreach (var item in Model)
+                {
+                    sl++;
+                
+                    <tr>
+                        <td>
+                            @sl
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.RequisitionNumber, new {@class = "text-danger"})
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.StatusType)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Requisition.SubmitDateTime)
+                        </td>
 
-        </table>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Requisition.Employee.FullName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Requisition.Employee.Designation.Title)
+                        </td>
+                        <td class="text-center">
+                            @Html.ActionLink("Assign", "Create", "AssignRequisitions", new {requisitionId = item.RequisitionId}, new {@class = "btn btn-primary btn-sm"})
+                            @Html.ActionLink("View", "ViewDetails", "AssignRequisitions", new {id = item.RequisitionId}, new {@class = "btn btn-info btn-sm"})
+                            @Html.ActionLink("Cancel", "Cancel", "AssignRequisitions", new {statusId = item.Id}, new {@class = "btn btn-outline-danger btn-sm"})
 
-
-    </div>
+                        </td>
+                    </tr>
+                }
+                </tbody>
+                <tfoot>
+                <tr class="bg-secondary text-white">
+                    <th>
+                        SL
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.RequisitionNumber)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.StatusType)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Requisition.SubmitDateTime)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Requisition.Employee.FullName)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Requisition.Employee.Designation)
+                    </th>
+                    <th class="text-center">
+                        Action
+                    </th>
+                </tr>
+                </tfoot>
+            </table>
+        </div>
+        </div>
 </div>
+
+@section scripts
+{
+
+    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js" type="text/javascript"></script>
+    <script src="https://cdn.datatables.net/1.10.19/js/dataTables.semanticui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.js"></script>
+
+    <script type="text/javascript" src="https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/responsive/2.2.3/js/responsive.bootstrap.min.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            $('#example2').DataTable();
+        });
+    </script>
+}
