--- a/RMS.App/Views/Vehicles/Edit.cshtml
+++ b/RMS.App/Views/Vehicles/Edit.cshtml
@@ -17,6 +17,14 @@
         @Html.HiddenFor(model => model.Id)
 
         <div class="form-group row">
+            @Html.LabelFor(model => model.VehicleTypeId, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-4">
+                @Html.DropDownList("VehicleTypeId", null, "Select", htmlAttributes: new { @class = "form-control", @id = "searchableDD2" })
+                @Html.ValidationMessageFor(model => model.VehicleTypeId, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group row">
             @Html.LabelFor(model => model.BrandName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-4">
                 @Html.EditorFor(model => model.BrandName, new { htmlAttributes = new { @class = "form-control" } })
@@ -59,14 +67,6 @@
         </div>
 
         <div class="form-group row">
-            @Html.LabelFor(model => model.VehicleTypeId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-4">
-                @Html.DropDownList("VehicleTypeId", null,"Select", htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.VehicleTypeId, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group row">
             <div class="control-label col-md-2"></div>
             <div class="col-md-10">
                 <input type="submit" value="Update" class="btn btn-success"/> &nbsp;
@@ -78,4 +78,5 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    <script src="~/Scripts/chosenDD/chosen_DD.js"></script>
 }
