--- a/RMS.App/Views/Employees/Create.cshtml
+++ b/RMS.App/Views/Employees/Create.cshtml
@@ -20,6 +20,7 @@
         <li class=""><a data-toggle="tab" href="#menu2">&nbsp;&nbsp; <strong>Personal Informatin</strong> &nbsp;&nbsp;</a></li>
         <li class=""><a data-toggle="tab" href="#menu3">&nbsp;&nbsp; <strong>Address</strong> &nbsp;&nbsp; </a></li>
         <li class=""><a data-toggle="tab" href="#menu4">&nbsp;&nbsp; <strong>Office Information</strong> &nbsp;&nbsp;</a></li>
+        <li class=""><a data-toggle="tab" href="#menu5">&nbsp;&nbsp; <strong>Login Information</strong> &nbsp;&nbsp;</a></li>
     </ul>
     <br/>
         @if (TempData["msg"] != null)
@@ -303,7 +304,7 @@
                 </div>
             </div>
         </div>
-
+        @*Office Information*@
         <div id="menu4" class="tab-pane fade">
         <br/>
         <div class="form-horizontal">
@@ -333,13 +334,13 @@
                 </div>
             </div>
 
-            <div class="form-group row">
+            @*<div class="form-group row">
                 <div class="col-md-2"></div>
                 <div class="col-md-6">
                     <input type="submit" value="Save" class="btn btn-success"/> &nbsp;
                     @Html.ActionLink("Back to List", "Index", null, new {@class = "btn btn-info"})
                 </div>
-            </div>
+            </div>*@
         </div>
         <div class="form-group row">
             <div class="col-md-6">
@@ -347,8 +348,56 @@
                     <li><a class="btn btn-dark" data-toggle="tab" href="#menu3">Provious</a></li>
                 </ul>
             </div>
+            </div>
         </div>
-    </div>
+
+
+    @*Login Infromation*@
+
+        <div id="menu5" class="tab-pane fade">
+            <br />
+            <div class="form-horizontal">
+                <h3 class="col-md-offset-3">Log In Info</h3><br />
+                <div class="form-group row">
+                   @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                <div class="col-md-4">
+                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                </div>
+                </div>
+
+                <div class="form-group row">
+                    @Html.Label("password", htmlAttributes: new { @class = "col-md-2 control-label" })
+                    <div class="col-md-4">
+                        @Html.Password("Password", Model.Password,new { @class = "form-control" })
+                    </div>
+                </div>
+
+                <div class="form-group row">
+
+                    @Html.Label("confirmPassword", htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-4">
+                        @Html.Password("confirmPassword", Model.ConfirmPassword, new { @class = "form-control" })
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-6">
+                        <input type="submit" value="Save" class="btn btn-success" /> &nbsp;
+                        @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-info" })
+                    </div>
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-md-6">
+                    <ul class="nav nav-tabs border-0">
+                        <li><a class="btn btn-dark" data-toggle="tab" href="#menu3">Provious</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+
     </div>
 </div>
 
