--- a/RMS.App/Views/Shared/_MenuBar.cshtml
+++ b/RMS.App/Views/Shared/_MenuBar.cshtml
@@ -37,63 +37,67 @@
                         <li class="menu-active">@Html.ActionLink("Home", "Index", "Home")</li>
                         <li>@Html.ActionLink("About", "About", "Home")</li>
                         <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                        <li class="menu-has-children">
+                        @if (User.IsInRole("Administrator"))
+                        {
 
-                            <a href="#">SetUp All</a>
-                            <ul>
-                                <li class="menu-has-children">
-                                    <a href="#">Organization</a>
-                                    <ul>
-                                        <li>@Html.ActionLink("Create New", "Create", "Organizations")</li>
-                                        <li>@Html.ActionLink("Organization List", "Index", "Organizations")</li>
-                                    </ul>
-                                </li>
-                                <li class="menu-has-children">
-                                    <a href="#">Department</a>
-                                    <ul>
-                                        <li>@Html.ActionLink("Create New", "Create", "Departments")</li>
-                                        <li>@Html.ActionLink("List Of Department", "Index", "Departments")</li>
+                            <li class="menu-has-children">
 
-                                    </ul>
-                                </li>
-                                <li class="menu-has-children">
-                                    <a href="#">Designation</a>
-                                    <ul>
-                                        <li>@Html.ActionLink("Create New", "Create", "Designations")</li>
-                                        <li>@Html.ActionLink("List Of Designation", "Index", "Designations")</li>
-                                    </ul>
-                                </li>
-                                <li class="menu-has-children">
-                                    <a href="#">Employee Type</a>
-                                    <ul>
-                                        <li>@Html.ActionLink("Create New", "Create", "EmployeeTypes")</li>
-                                        <li>@Html.ActionLink("List Of Employee", "Index", "EmployeeTypes")</li>
-                                    </ul>
-                                </li>
-                                <li class="menu-has-children">
-                                    <a href="#">Employee</a>
-                                    <ul>
-                                        <li>@Html.ActionLink("Create New", "Create", "Employees")</li>
-                                        <li>@Html.ActionLink("List Of Employee", "Index", "Employees")</li>
-                                    </ul>
-                                </li>
-                                <li class="menu-has-children">
-                                    <a href="#">Vehicle Types</a>
-                                    <ul>
-                                        <li>@Html.ActionLink("Create New", "Create", "VehicleTypes")</li>
-                                        <li>@Html.ActionLink("List Of Vehile Type", "Index", "VehicleTypes")</li>
-                                    </ul>
-                                </li>
-                                <li class="menu-has-children">
-                                    <a href="#">Vehicle</a>
-                                    <ul>
-                                        <li>@Html.ActionLink("Create New", "Create", "Vehicles")</li>
-                                        <li>@Html.ActionLink("List Of Vehicle", "Index", "Vehicles")</li>
+                                <a href="#">SetUp All</a>
+                                <ul>
+                                    <li class="menu-has-children">
+                                        <a href="#">Organization</a>
+                                        <ul>
+                                            <li>@Html.ActionLink("Create New", "Create", "Organizations")</li>
+                                            <li>@Html.ActionLink("Organization List", "Index", "Organizations")</li>
+                                        </ul>
+                                    </li>
+                                    <li class="menu-has-children">
+                                        <a href="#">Department</a>
+                                        <ul>
+                                            <li>@Html.ActionLink("Create New", "Create", "Departments")</li>
+                                            <li>@Html.ActionLink("List Of Department", "Index", "Departments")</li>
 
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
+                                        </ul>
+                                    </li>
+                                    <li class="menu-has-children">
+                                        <a href="#">Designation</a>
+                                        <ul>
+                                            <li>@Html.ActionLink("Create New", "Create", "Designations")</li>
+                                            <li>@Html.ActionLink("List Of Designation", "Index", "Designations")</li>
+                                        </ul>
+                                    </li>
+                                    <li class="menu-has-children">
+                                        <a href="#">Employee Type</a>
+                                        <ul>
+                                            <li>@Html.ActionLink("Create New", "Create", "EmployeeTypes")</li>
+                                            <li>@Html.ActionLink("List Of Employee", "Index", "EmployeeTypes")</li>
+                                        </ul>
+                                    </li>
+                                    <li class="menu-has-children">
+                                        <a href="#">Employee</a>
+                                        <ul>
+                                            <li>@Html.ActionLink("Create New", "Create", "Employees")</li>
+                                            <li>@Html.ActionLink("List Of Employee", "Index", "Employees")</li>
+                                        </ul>
+                                    </li>
+                                    <li class="menu-has-children">
+                                        <a href="#">Vehicle Types</a>
+                                        <ul>
+                                            <li>@Html.ActionLink("Create New", "Create", "VehicleTypes")</li>
+                                            <li>@Html.ActionLink("List Of Vehile Type", "Index", "VehicleTypes")</li>
+                                        </ul>
+                                    </li>
+                                    <li class="menu-has-children">
+                                        <a href="#">Vehicle</a>
+                                        <ul>
+                                            <li>@Html.ActionLink("Create New", "Create", "Vehicles")</li>
+                                            <li>@Html.ActionLink("List Of Vehicle", "Index", "Vehicles")</li>
+
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </li>
+                        }
 
                         <li>@Html.ActionLink("Send Requisition", "Create", "Requisitions")</li>
                         <li>@Html.ActionLink("Requisition Queue", "Queue", "RequisitionQueue")</li>
