--- a/RMS.App/Views/Account/Login.cshtml
+++ b/RMS.App/Views/Account/Login.cshtml
@@ -48,7 +48,7 @@
                 </div>
 
                 <p>
-                    @Html.ActionLink("Register as a new user", "Register")
+                    @*@Html.ActionLink("Register as a new user", "Register")*@
                 </p>
                 @* Enable this once you have account confirmation enabled for password reset functionality
                     <p>
