--- a/RMS.App/Views/Shared/_MenuBar.cshtml
+++ b/RMS.App/Views/Shared/_MenuBar.cshtml
@@ -99,9 +99,12 @@
                                 </ul>
                             </li>
                         }
+                        <li>@Html.ActionLink("Setup Queue", "Index", "SetupAll")</li>
 
                         <li>@Html.ActionLink("Send Request", "Create", "Requisitions")</li>
+
                         <li>@Html.ActionLink("Requisition Queue", "Queue", "RequisitionQueue")</li>
+
                         @*<li class="menu-has-children">
                                 <a href="#">Requisition Queue</a>
                                 <ul>
