--- a/RMS.App/Views/Employees/Create.cshtml
+++ b/RMS.App/Views/Employees/Create.cshtml
@@ -145,8 +145,6 @@
                     
                 </div>
 
-                    
-
             </div>
         </div>
 
@@ -342,12 +340,14 @@
                 </div>
             </div>*@
         </div>
-        <div class="form-group row">
-            <div class="col-md-6">
-                <ul class="nav nav-tabs border-0">
-                    <li><a class="btn btn-dark" data-toggle="tab" href="#menu3">Provious</a></li>
-                </ul>
-            </div>
+            <div class="form-group row">
+                <div class="col-md-8">
+                    <ul class="nav nav-tabs border-0">
+                        <li><a class="btn btn-dark" data-toggle="tab" href="#menu3">Provious</a></li> &nbsp;
+                        <li>&nbsp;&nbsp;</li>&nbsp;
+                        <li><a class="btn btn-dark" data-toggle="tab" href="#menu5"> &nbsp; Next &nbsp; </a></li>
+                    </ul>
+                </div>
             </div>
         </div>
 
@@ -391,7 +391,7 @@
             <div class="form-group row">
                 <div class="col-md-6">
                     <ul class="nav nav-tabs border-0">
-                        <li><a class="btn btn-dark" data-toggle="tab" href="#menu3">Provious</a></li>
+                        <li><a class="btn btn-dark" data-toggle="tab" href="#menu4">Provious</a></li>
                     </ul>
                 </div>
             </div>
