--- a/RMS.App/Views/GatePass/Edit.cshtml
+++ b/RMS.App/Views/GatePass/Edit.cshtml
@@ -44,7 +44,7 @@
         <div class="form-group row">
             <div class="col-md-2"></div>
             <div class="col-md-5">
-                <input type="submit" value="Update" class="btn btn-success"/> &nbsp;
+                <input type="submit" value="CheckIn" class="btn btn-success"/> &nbsp;
                 @Html.ActionLink("Back to List", "Index",null,new {@class="btn btn-info"})
             </div>
         </div>
