--- a/RMS.App/Views/Home/AboutDeveloper.cshtml
+++ b/RMS.App/Views/Home/AboutDeveloper.cshtml
@@ -14,16 +14,16 @@
 <hr/>
 <div class="container">
     <div class="row">
-        <div class="col-md-2">
-            <h4 class="">Developers</h4>
+        <div class="col-md-3">
+            <h3 class=""> <i class="fa fa-group" aria-hidden="true"></i> Developers </h3>
             <br/>
-            <a href="#" class="font-weight-light lnr-underline" data-toggle="collapse" data-target="#demo1"> Parvez Ahmed</a><br />
-            <a href="#" class="font-weight-light lnr-underline" data-toggle="collapse" data-target="#demo2"> Masum Dollar</a><br/>
-            <a href="#" class="font-weight-light lnr-underline" data-toggle="collapse" data-target="#demo3"> Sultana Bonna</a><br/>
-            <a href="#" class="font-weight-light lnr-underline" data-toggle="collapse" data-target="#demo4"> Benajeer Haque</a><br/>
-            <a href="#" class="font-weight-light lnr-underline" data-toggle="collapse" data-target="#demo5"> Chitto Ranjan</a><br />
+            <a href="#" class="font-weight-light " data-toggle="collapse" data-target="#demo1"><i class="fa fa-address-card-o" aria-hidden="true"></i> Parvez Ahmed</a><br />
+            <a href="#" class="font-weight-light " data-toggle="collapse" data-target="#demo2"><i class="fa fa-address-card-o" aria-hidden="true"></i> Masum Dollar</a><br/>
+            <a href="#" class="font-weight-light " data-toggle="collapse" data-target="#demo3"><i class="fa fa-address-card-o" aria-hidden="true"></i> Sultana Bonna</a><br/>
+            <a href="#" class="font-weight-light " data-toggle="collapse" data-target="#demo4"><i class="fa fa-address-card-o" aria-hidden="true"></i> Benajeer Haque</a><br/>
+            <a href="#" class="font-weight-light " data-toggle="collapse" data-target="#demo5"><i class="fa fa-address-card-o" aria-hidden="true"></i> Chitto Ranjan</a><br />
         </div>
-        <div class="col-md-10">
+        <div class="col-md-9">
             <div id="demo1" class="row collapse clearfix">
                 <div class="col-md-12">
                     <h3 class="text-center">Parvez Ahmed</h3>
@@ -49,7 +49,7 @@
                         <strong>Title :</strong> <a href="#" title="Link !" target="_blank"> Link B !</a>
                     </p>
                     <p>
-                        <strong>
+                        <strong class="font-weight-bold">
                             Contacts:<br/>
                             Mobile: - +88 01714863917<br/>
                             Email: - chittoranjan.sarker@gmail.com
@@ -82,7 +82,7 @@
                         <strong>Title :</strong> <a href="#" title="Link !" target="_blank"> Link B !</a>
                     </p>
                     <p>
-                        <strong>
+                        <strong class="font-weight-bold">
                             Contacts:<br />
                             Mobile: - +88 01714863917<br />
                             Email: - chittoranjan.sarker@gmail.com
@@ -116,7 +116,7 @@
                         <strong>Title :</strong> <a href="#" title="Link !" target="_blank"> Link B !</a>
                     </p>
                     <p>
-                        <strong>
+                        <strong class="font-weight-bold">
                             Contacts:<br />
                             Mobile: - +88 01681854486<br />
                             Email: - luth.sul@gmail.com
@@ -150,7 +150,7 @@
                         <strong>Title :</strong> <a href="#" title="Link !" target="_blank"> Link B !</a>
                     </p>
                     <p>
-                        <strong>
+                        <strong class="font-weight-bold">
                             Contacts:<br />
                             Mobile: - +88 01681854486<br />
                             Email: - benjeer.nure@gmail.com
@@ -183,7 +183,7 @@
                         <strong>Title :</strong> <a href="#" title="Link !" target="_blank"> Link B !</a>
                     </p>
                     <p>
-                        <strong>
+                        <strong class="font-weight-bold">
                             Contacts:<br />
                             Mobile: - +88 01714 863 917<br />
                             Email: - chittoranjan.sarker@gmail.com
