--- a/RMS.App/Views/Shared/_MenuBar.cshtml
+++ b/RMS.App/Views/Shared/_MenuBar.cshtml
@@ -24,7 +24,8 @@
                 </div>
                 <div class="col-lg-2 col-sm-2 col-2 header-top-right no-padding">
                     <p class="float-right">
-                        <a class="btn btn-sm btn-outline-info bg-transparent text-white" href="@Url.Action("Login", "Account")" title="Log In">Log IN</a>
+                        @*<a class="btn btn-sm btn-outline-info bg-transparent text-white" href="@Url.Action("Login", "Account")" title="Log In">Log IN</a>*@
+                        @Html.Partial("_LoginPartial")
                     </p>
 
                 </div>
