Login cshtml design solve

--- a/RMS.App/Views/Shared/_Layout.cshtml
+++ b/RMS.App/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
 
 <!-- Start service Area -->
 <section class="service-area" style="height: 100vh; min-height: 100vh; overflow: hidden; clear: both; height: auto; margin-bottom: 25px;">
-    <div style="height: 145px;"></div>
+    <div class="" style="height: 170px;"></div>
     <div class="container">
         <div class="row d-flex justify-content-center">
             <div class="col-md-12 bgnewcolor" style="padding: 20px 20px;">
