--- a/RMS.App/Views/Employees/Create.cshtml
+++ b/RMS.App/Views/Employees/Create.cshtml
@@ -384,7 +384,7 @@
                     <div class="col-md-2"></div>
                     <div class="col-md-6">
                         <input type="submit" value="Save" class="btn btn-success" /> &nbsp;
-                        @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-info" })
+                        @Html.ActionLink("Back to List", "Index","Employees", null, new { @class = "btn btn-info" })
                     </div>
                 </div>
             </div>
