--- a/RMS.App/Views/Shared/_MenuBar.cshtml
+++ b/RMS.App/Views/Shared/_MenuBar.cshtml
@@ -4,7 +4,7 @@
     <div class="header-top" >
         <div class="container">
             <div class="row align-items-center">
-                
+
                 <div class="col-lg-4 col-sm-4 col-4 header-top-left no-padding">
 
                     <p class="float-left">
@@ -12,22 +12,20 @@
                         &nbsp; <strong style="font-size: 20px;" class="font-weight-bold" id="logotext">Bangladesh Computer Council</strong>
                     </p>
                 </div>
-
-                <div class="col-lg-6 col-sm-6 col-6 header-top-right no-padding">
+                <div class="col-lg-8 col-sm-8 col-8 header-top-right no-padding">
                     <p class="float-right">
-                        <a class="btn btn-sm btn-outline-info bg-transparent text-white" href="#" title="Contact">+880123456789</a>
-                        <a class="btn btn-sm btn-outline-info bg-transparent text-white" href="mailto:support@bcc.gov.bd" title="Support mail">support@bcc.gov.bd</a>
-                        <a class="btn btn-sm btn-outline-info bg-transparent text-white" href="@Url.Action("Help", "Home")" title="Need user help!" target="_blank">Help!</a>
-
-                    </p>
-
-                </div>
-                <div class="col-lg-2 col-sm-2 col-2 header-top-right no-padding">
-                    <p class="float-right">
-                        @*<a class="btn btn-sm btn-outline-info bg-transparent text-white" href="@Url.Action("Login", "Account")" title="Log In">Log IN</a>*@
+                        <a class="btn btn-sm btn-outline-info bg-transparent text-white" href="@Url.Action("Help", "Home")" title="Need user help!" target="_blank"><i class="fa fa-info"></i> Help!</a>
                         @Html.Partial("_LoginPartial")
                     </p>
 
+                </div>
+            </div>
+            <div class="row clear">
+                <div class="col-lg-12 col-sm-12 col-12 header-top-right no-padding ">
+                    <p class="text-right no-padding no-margin">
+                        <a class="bg-transparent text-white" href="#" title="Contact"><i class="fa fa-phone"></i> +88 01234 567 890</a>
+                        <a class="bg-transparent text-white" href="mailto:support@bcc.gov.bd" title="Support mail"><i class="fa fa-envelope-o"></i> support@bcc.gov.bd</a>
+                    </p>
                 </div>
             </div>
         </div>
@@ -99,7 +97,7 @@
                                     </li>
                                 </ul>
                             </li>*@
-
+                        
                             <li>@Html.ActionLink("Setup Queue", "Index", "SetupAll")</li>
                         }
                        
