--- a/RMS.App/Views/RequisitionQueue/Report.cshtml
+++ b/RMS.App/Views/RequisitionQueue/Report.cshtml
@@ -1,4 +1,6 @@
 ﻿
+
+@model RMS.App.ViewModels.Report.RequisitionSummaryReportVM
 @{
     ViewBag.Title = "Report";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -6,3 +8,15 @@
 
 <h2>Report</h2>
 
+ 
+        <div class="form-horizontal">
+
+            <div class="form-group">
+
+
+            </div>
+        </div>
+
+
+
+   
